# Hand-Tracking-SDK

./: CMakeLists.txt  README.md
Handlib-Linux-a/: CMakeLists.txt
Handlib-Linux-a/src/: hand.h  test.cpp
examples/: test.cpp
source/: Classifier.h  CommonData.h  PalmDetector.cpp  PalmDetector.h  PalmLandmarkDetector.cpp  PalmLandmarkDetector.h  TypeDefines.h  Utils.cpp  Utils.h  hand.cpp  hand.h  optional.h
